fixed formatting on mobile

--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -90,6 +90,9 @@
 
     a {
       text-decoration: none;
+      font-size: 24px;
+      line-height: 50px;
+      font-weight: 500;
 
       &:hover {
         color: var(--primary);
