--- a/pages/about/about.module.scss
+++ b/pages/about/about.module.scss
@@ -82,6 +82,7 @@
 
 @media screen and (max-width: 480px) {
   .content {
+    margin: 5rem auto;
     padding: 0 2.5rem;
   }
   .imageContainer {
